# blocksnap

./: README.md  pyproject.toml
backend/: .gitignore  Procfile  manage.py  parse_transfers.py  pyproject.toml  requirements.txt
backend/core/: admin.py  forms.py  helpers.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_profile_snapshots.py  0002_snapshot_token_balance.py  0003_merge_20220220_0216.py  0004_snapshot_rpc_url.py  0005_alter_snapshot_rpc_url.py  0006_snapshot_creator.py
backend/holdersnap/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: package.json
frontend/components/: Header.tsx  SIWEProvider.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/snapshots/: [snapshotId].tsx  index.tsx  new.tsx
frontend/src/: App.js
frontend/utils/: isJSON.js
